wp-content/themes/motherjones/style.css
/* ... */
.photo-byline {
  margin: 5px 0;
}

.caption strong, .master-image-caption {
  color: black;
  font-style: normal;
  text-transform: none;
  font-family: Calluna, serif;
  font-size: 14px;
  margin: 10px 0 0 0;
  line-height: 17px;
  font-weight: normal;
}
.caption strong a {
  color: black;
}
#content-area .inline a {
  border-bottom: none;
}
#content-area .caption a, #content-area .master-image-caption a {
  display: inline;
}

.section-lead {
  font-size: 20px;
  font-family: Mallory, sans-serif;
  font-weight: bold;
}
.section-lead strong {
  font-weight: normal;
}

/* fix interior links */
:target:before {
  content:"";
  display:block;
  height:40px; /* fixed header height*/
  margin:-40px 0 0; /* negative fixed header height */
}
/* end fix interior links */

/* doccloud */
.documentcloud-resource-links li {
  display: inline;
  margin: 5px;
}
/* end doccloud */

/* timelines */
.timeline dt {
  font-family: Calluna, serif;
  display: block;
  float: left;
  width: 100px;
  font-size: 30px;
  font-weight: bold;
  text-align: left;
  margin-top: 18px;
  color: #ccc;
}
.timeline dd {
  display: block;
  float: left;
  clear: right;
  margin: 0 0 40px 0;
  width: 490px;
}
.timeline:after {
    content: '';
    display: block;
    clear: both;
}

/* end timelines */

/* end within article body */

/* footer */
footer#colophon ul {
  padding: 0;
  margin: 0 auto 15px;
  width: 165px;
  clear: both;
}
footer#colophon ul li {
  list-style: none;
  padding: 2px 0;
  font-size: 12px;
  background-position: 0% 100%;
}

footer#colophon {
	background-color: black;
  color: #ccc;
  text-align: center;
  padding-top: 32px;
}
footer#colophon #footer-list {
  font-family: Mallory, sans-serif;
  font-weight: bold;
  text-transform: uppercase;
  width: 200px;
  color: #ff6900;
}
footer#colophon #footer-list li { 
  font-size: 15px;
}
footer#colophon #footer-list a {
  color: #ff6900;
  margin: 0 5px;
}
footer#colophon #footer-list {
  font-family: Mallory, sans-serif;
  font-weight: bold;
  text-transform: uppercase;
  width: 200px;
  color: #ff6900;
}
footer#colophon #footer-list li {
  font-size: 15px;
}

a#footer-logo {
  background-image: none;
}
#footer-logo img{
  width: 274px;
  height: auto;
  margin: 0 auto;
  display: block;
}
#footer-social li {
  display: block;
  float: left;
}
#footer-social .toolbar-btn {
  background-image: none;
  margin: 20px 5px;
}
#footer-social .toolbar-btn a {
  color: #cccccc;
  text-decoration: none;
  height: 0px;
}
#footer-social i {
  position: relative;
}
#footer-social .circled-icon {
  width: 40px;
}
#footer-social .circled-icon i {
    font-size: 26px;
    padding: 4px;
    position: relative;
    top: -3px;
    left: 0;
}
#footer-social .circled-icon.tweet i {
  top: -2px;
}
#copyright {
  font-family: Calluna, serif;
  font-size: 14px;
  margin: 35px auto;
}
footer#colophon #copyright a {
  color: #ccc;
  margin: 0 5px;
  text-shadow: -1px 0 0 black, 0 1px 0 black, 1px 0 0 black, 0 -1px 0 b
  -1px -1px 0 black, 1px 1px 0 black, 1px -1px 0 black, -1px 1px 0 blac
}
/* end footer */

/* readers like you */
.members-like-you {
  font-style: italic;
  line-height: 17px;
  font-size: 14px;
  clear: both;
  padding-top: 18px;
  border-top: 1px solid #ccc;
}
.members-like-you em {
  font-style: normal;
}
.members-like-you a {
  color: #ff6900;
}
.members-like-you a:hover {
  opacity: .7;
}
/* end readers like you */

/* social buttons */
ul.social-tools {
  list-style-type: none;
  display: block;
  background: white;
  margin: 0 auto 20px;
  height: 32px;
  float: none;
}
ul.social-tools li {
  display: inline-block;
}

.article .social-tools.top {
  width: 95px;
  padding: 0 15px;
}
.article .social-container.top {
  height: 17px;
  border-bottom: 1px solid #ccc;
  margin-bottom: 20px;
}

a.social {
  text-decoration: none;
  text-align: center;
  font-size: 18px;
  position: relative;
  border-bottom: none;
  text-shadow: 0 0;
  display: block;
  background-image: none;
  border: 1px solid #ff6900;
  border-radius: 40px;
  height: 30px;
  width: 30px;
  display: inline-block;
}
#main a.social {
  background-image: none;
}
.social i {
  display: block;
  font-size: 20px;
  line-height: 30px;
}

/* end social buttons */

/* begin end of article author stuff */

ul.author-bios {
  list-style-type: none;
  padding: 0;
}
.author-data {
  float: left;
}
.author-bio .byline {
  display: block;
  line-height: 14px;
}
.author-bio .byline a {
  display: inline-block;
}
.author-bio-text {
  font-size: 12px;
  margin-top: 5px;
  font-family: Mallory, sans-serif;
}

.author-bio .author-image {
  float: left;
  margin-right: 15px;
  margin-bottom: 20px;
  height: 80px;
  width: 80px;
  border-radius: 50px;
  overflow: hidden;
}
/* end end of article author stuff */

/* related articles */
#related-articles {
  text-align: center;
}
#related-articles-list {
  list-style-type: none;
  padding: 0;
}
/* end related articles */

/* article list items */
li.article-item {
  text-align: left;
  padding: 0;
  margin: 0;
  list-style-type: none;
  padding-bottom: 10px;
  clear: both;
}
#main li.article-item a {
  background-image: none;
}
li.article-item img {
  height: auto;
  width: 208px; 
  margin-right: 15px;
  margin-top: 4px;
}
li.article-item .byline,
li.article-item h3 {
  max-width: 395px;
  margin-top: 4px;
}
.article-item .article-image,
.article-item .article-data {
  float: left;
}
/* end article list items */

